--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,31 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  display: grid;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.allgifs {
+  display: grid;
+  grid-template-columns: 50% 50%;
+  grid-template-rows: auto;
+
+  background: #fc1;
+}
+
+.searchbar {
+  border: 3px solid plum;
+  border-radius: 5px;
+  height: 35px;
+  width: 50%;
+  margin: 25px 25px 25px 5px;
+  outline: 50;
+  background-color: lightyellow;
 }
